--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -21,16 +20,13 @@ $OguruPro-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$OguruPro-theme: mat.define-light-theme((
-  color: (
-    primary: $OguruPro-primary,
-    accent: $OguruPro-accent,
-    warn: $OguruPro-warn,
-  )
-));
+$OguruPro-theme: mat.define-light-theme((color: (primary: $OguruPro-primary,
+                accent: $OguruPro-accent,
+                warn: $OguruPro-warn,
+            )));
 
 html body {
-    zoom:100%
+    zoom: 100%
 }
 
 input::-webkit-outer-spin-button,
@@ -47,15 +43,19 @@ input::-webkit-inner-spin-button {
     letter-spacing: normal;
     width: 100%;
 }
+
 .mat-form-field-appearance-legacy .mat-form-field-label {
     color: rgb(0 0 0) !important;
 }
+
 .mat-placeholder-required {
     color: red !important
 }
+
 .mat-slide-toggle.mat-primary.mat-checked .mat-slide-toggle-thumb {
     background-color: rgb(255, 81, 0) !important;
 }
+
 .mat-slide-toggle.mat-primary.mat-checked .mat-slide-toggle-bar {
     background-color: rgba(89, 89, 89, 0.549) !important;
 }
@@ -75,45 +75,47 @@ input::-webkit-inner-spin-button {
     vertical-align: text-top;
 }
 
- .table tbody tr td {
+.table tbody tr td {
     font-size: 13px !important;
-    }
+}
 
-    thead  {
-        position: -webkit-sticky;
-        position: sticky;
-        top: 0;
-        z-index: 2;
-        vertical-align: top;   
-    }
-    
-    thead [scope=row] {
-        position: -webkit-sticky;
-        position: sticky;
-        left: 0;
-        z-index: 1;
-    }
-    
-    thead [scope=row] {
-        vertical-align: top;
-        color: inherit;
-    }
-    
-    thead :not([scope=row]):first-child {
-        left: 0;
-        z-index: 3;
-        vertical-align: top;
-    }
+thead {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    vertical-align: top;
+}
 
-    .page-link {
-        border-radius: 20px;
-    }
+thead [scope=row] {
+    position: -webkit-sticky;
+    position: sticky;
+    left: 0;
+    z-index: 1;
+}
 
-    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-        color: #ffffff !important;
-        background-color: #ff5100 !important;
-        border-color: var(--bs-nav-tabs-link-active-border-color);
-    }
+thead [scope=row] {
+    vertical-align: top;
+    color: inherit;
+}
+
+thead :not([scope=row]):first-child {
+    left: 0;
+    z-index: 3;
+    vertical-align: top;
+}
+
+.page-link {
+    border-radius: 20px;
+}
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    color: #ffffff !important;
+    background-color: #ff5100 !important;
+    border-color: var(--bs-nav-tabs-link-active-border-color);
+}
+
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
@@ -121,40 +123,43 @@ input::-webkit-inner-spin-button {
 
 /* You can add global styles to this file, and also import other style files */
 
-.card{
+.card {
     padding-left: 15px;
     padding-right: 15px;
     margin-top: 10px;
 }
-.content{
+
+.content {
     background-image: url(assets/images/SHOP.svg);
     background-size: 100%;
     -webkit-user-select: none;
--moz-user-select: none;
--ms-user-select: none;
-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 
 
-.card_TBL{
+.card_TBL {
     margin-top: 10px;
 }
-.header{
+
+.header {
     height: 30px;
     color: rgb(255, 81, 0)
 }
 
-.blue{
+.blue {
     background-color: rgb(25, 19, 80);
 }
 
-.og{
+.og {
     background-color: rgb(255, 81, 0);
 }
 
 .container-fluid {
-    min-height: 92vh;
+    min-height: 93vh;
+    height: auto;
 }
 
 .allcard {
@@ -166,7 +171,7 @@ user-select: none;
     padding: 10px;
 }
 
-.bc{
+.bc {
     height: 93vh !important;
     background-color: #e3e3e3 !important;
 }
@@ -182,17 +187,17 @@ user-select: none;
     padding-left: 4px;
 }
 
-.btn_icon{
+.btn_icon {
     background: none;
-    border: none; 
+    border: none;
 }
 
 .btn_icon:focus {
     transition: 0.5s;
     transform: scale(.9);
-  }
+}
 
-.plus_icon{
+.plus_icon {
     background: #615be7;
     color: #fff;
     padding: 3px;
@@ -202,18 +207,18 @@ user-select: none;
     width: 30px !important;
     cursor: pointer;
     transition: .5s;
-    box-shadow: 2px 2px 6px #9c9795fa; 
-    font-weight: 900; 
+    box-shadow: 2px 2px 6px #9c9795fa;
+    font-weight: 900;
 }
 
-.plus_icon:hover{
+.plus_icon:hover {
     color: #615be7 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.Grid_icon{
+.Grid_icon {
     background: #615be7;
     color: #fff;
     padding: 4px;
@@ -223,18 +228,18 @@ user-select: none;
     width: 30px !important;
     cursor: pointer;
     transition: .5s;
-    box-shadow: 2px 2px 6px #9c9795fa; 
-    font-weight: 900; 
+    box-shadow: 2px 2px 6px #9c9795fa;
+    font-weight: 900;
 }
 
-.Grid_icon:hover{
+.Grid_icon:hover {
     color: #615be7 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.save_icon{
+.save_icon {
     background: #3650b4;
     color: #fff;
     padding: 3px;
@@ -244,18 +249,18 @@ user-select: none;
     width: 30px !important;
     cursor: pointer;
     transition: .5s;
-    box-shadow: 2px 2px 6px #9c9795fa; 
-    font-weight: 900; 
+    box-shadow: 2px 2px 6px #9c9795fa;
+    font-weight: 900;
 }
 
-.save_icon:hover{
+.save_icon:hover {
     color: #3650b4 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.delete_icon{
+.delete_icon {
     background: #ff0000;
     color: #fff;
     padding: 3px;
@@ -268,14 +273,14 @@ user-select: none;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-.delete_icon:hover{
+.delete_icon:hover {
     color: #ff0000 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.swap_icon{
+.swap_icon {
     background: #38a042e8;
     color: #fff;
     padding: 3px;
@@ -288,14 +293,14 @@ user-select: none;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-.swap_icon:hover{
+.swap_icon:hover {
     color: #38a042e8 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.sync_disabled{
+.sync_disabled {
     background: #ff5100;
     color: #fff;
     padding: 3px;
@@ -309,14 +314,14 @@ user-select: none;
 
 }
 
-.sync_disabled:hover{
+.sync_disabled:hover {
     color: #ff5100 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.edit_icon{
+.edit_icon {
     background: #393497e8;
     color: #fff;
     padding: 3px;
@@ -329,14 +334,14 @@ user-select: none;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-.edit_icon:hover{
+.edit_icon:hover {
     color: #393497e8 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.detail_icon i{
+.detail_icon i {
     background: #38a042e8;
     color: #fff;
     padding: 4px !important;
@@ -349,14 +354,14 @@ user-select: none;
     box-shadow: 2px 2px 6px #9c9795fa;
 }
 
-.detail_icon i:hover{
+.detail_icon i:hover {
     color: #38a042e8 !important;
     background: #ffffff;
     font-size: 23px;
     cursor: pointer
 }
 
-.fa-file-excel-o{
+.fa-file-excel-o {
     color: #458f37;
     font-size: 22px !important;
     height: 30px !important;
@@ -365,14 +370,14 @@ user-select: none;
     cursor: pointer;
 }
 
-.fa-file-excel-o:hover{
+.fa-file-excel-o:hover {
     color: #458f37 !important;
     font-size: 23px;
     cursor: pointer
 }
 
-.SelectYourShop{
-    color: aliceblue; 
+.SelectYourShop {
+    color: aliceblue;
     cursor: pointer;
     transition: 0.5s;
     background: aliceblue;
@@ -382,7 +387,7 @@ user-select: none;
     width: 75% !important;
 }
 
-.logoutBtn{
+.logoutBtn {
     float: right;
     color: aliceblue;
     margin-right: 5% !important;
@@ -392,10 +397,11 @@ user-select: none;
     font-size: 25px;
 }
 
-.logoutBtn:hover{
-    color: rgb(228, 30, 30); 
+.logoutBtn:hover {
+    color: rgb(228, 30, 30);
     cursor: pointer
 }
+
 // icon manual desing in css end
 
 // number off pagenation start css
@@ -427,6 +433,7 @@ user-select: none;
     transition: all .2s linear;
     font-weight: 500;
 }
+
 .page-link {
     border: none !important;
     color: #757575 !important
@@ -438,9 +445,11 @@ user-select: none;
     background-color: #ff94009e !important;
     border-color: var(--bs-pagination-hover-border-color);
 }
+
 .page-link {
     border-radius: 5px;
 }
+
 // number off pagenation end css
 
 // swal popup box in button start css
@@ -452,6 +461,7 @@ user-select: none;
     color: #fff;
     font-size: 1em;
 }
+
 // swal popup box in button end css
 
 // ng select start import theme css or manual css
@@ -462,7 +472,7 @@ user-select: none;
 /* Importing Bootstrap SCSS file. */
 
 .ng-select .ng-select-container {
-    color: rgba(0,0,0,0.87);
+    color: rgba(0, 0, 0, 0.87);
     align-items: baseline;
     min-height: 39.5px !important;
 }
@@ -470,8 +480,8 @@ user-select: none;
 .ng-select .ng-select-container {
     color: #333;
     background-color: #fff;
-     border-radius: 0px !important;
-    border: 0px  !important; 
+    border-radius: 0px !important;
+    border: 0px !important;
 }
 
 .ng-select .ng-select-container .ng-value-container .ng-placeholder {
@@ -479,34 +489,37 @@ user-select: none;
     top: 16px !important;
     color: rgb(30 30 30);
     transform-origin: left 0;
-    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1),color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1),width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), width 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
-     top: 15px !important; 
+    top: 15px !important;
     left: 0;
     padding-left: 0px !important;
     padding-right: 50px;
 }
 
 .ng-select.ng-select-focused .ng-select-container .ng-value-container .ng-placeholder {
-   transform: translateY(-1.28125em) scale(0.75) perspective (100px) translateZ(0.001px);
+    transform: translateY(-1.28125em) scale(0.75) perspective (100px) translateZ(0.001px);
     color: #000000 !important;
 }
 
 .ng-select.ng-select-focused:not(.ng-select-opened)>.ng-select-container {
     border-color: #0080ff00 !important;
-    box-shadow:inset 0 0px 0px rgb(0 0 0 / 0%), 000 0px rgba(0, 128, 255, 0) !important;
+    box-shadow: inset 0 0px 0px rgb(0 0 0 / 0%), 000 0px rgba(0, 128, 255, 0) !important;
 }
+
 .ng-select.ng-select-single .ng-select-container .ng-clear-wrapper {
     align-self: flex-end;
     bottom: 3px;
 }
+
 .ng-select.ng-select-single .ng-select-container .ng-arrow-wrapper {
     align-self: flex-end;
     bottom: 5px;
     padding: 0px;
 }
+
 // ng select end css
 
 @import '~bootstrap/scss/bootstrap';
@@ -545,9 +558,12 @@ user-select: none;
     overflow-y: auto;
     outline: 0;
 }
-.cdk-global-overlay-wrapper, .cdk-overlay-container {
+
+.cdk-global-overlay-wrapper,
+.cdk-overlay-container {
     z-index: 99999 !important;
- }
+}
+
 // ngbModel dorpdowre end in css
 
 //grid card start
@@ -559,10 +575,8 @@ user-select: none;
 }
 
 .course-card-body:hover {
-   transform: scale(.95);
-   box-shadow: -1px 2px 10px #eb582239;
-
-
+    transform: scale(.95);
+    box-shadow: -1px 2px 10px #eb582239;
 }
 
 .cardImg {
@@ -587,8 +601,9 @@ user-select: none;
 
 //grid card end
 
-.mat-checkbox-indeterminate.mat-primary .mat-checkbox-background, .mat-checkbox-checked.mat-primary .mat-checkbox-background {
-    background-color: #ff5100 ;
+.mat-checkbox-indeterminate.mat-primary .mat-checkbox-background,
+.mat-checkbox-checked.mat-primary .mat-checkbox-background {
+    background-color: #ff5100;
 }
 
 .ng-select .ng-arrow-wrapper {
