--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -84,9 +84,9 @@
                             </form>
                             <!--  list -->
                             <div class="body p-2">
-                                <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                                <div id="PurchasePDF" class="col-sm-12" style="overflow: auto; height: 450px;">
                                     <table class="table table-striped table-hover table-sm table-bordered"
-                                        style="border: 2px solid #fff !important;" id="ProductTransferExcel">
+                                        style="border: 2px solid #fff !important;" id="CaseConExcel">
                                         <thead>
                                             <tr style="white-space: nowrap;">
                                                 <th>S.No</th>
@@ -103,6 +103,32 @@
                                                 <th>Payment Status</th>
                                                 <th>DeliveryDate</th>
                                                 <th>ShopName</th>
+                                            </tr>
+                                            <tr class="totolRow" >
+                                                <td>
+                                                    <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                        aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
+                                                        <button class="bg_none ms-4"
+                                                        printTitle="Cash_Collection Report {{this.selectsShop}}"
+                                                        printSectionId="PurchasePDF" ngxPrint
+                                                        ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                                        <i class="far fa-file-pdf "
+                                                            style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                    </button>
+                                                </td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
                                             </tr>
                                         </thead>
                                         <tbody class="text-center">
@@ -126,6 +152,11 @@
                                                         *ngIf="d.AreaName !== 'null'">({{d.AreaName}})</span> </td>
                                             </tr>
                                         </tbody>
+                                        <tfoot style="display: none;">
+                                            <tr  *ngFor="let p of paymentMode">
+                                                <th colspan="4" style="background-color: red !important;">{{p.Name}} - {{p.Amount}}</th>        
+                                            </tr>
+                                        </tfoot>
                                     </table>
                                 </div>
 
@@ -167,11 +198,6 @@
                                 </div>
                             
                                </div>
-                                    
-                                    
-
-                             
-
                             </div>
                         </div>
                     </div>
