--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -154,7 +154,7 @@
                                         </tbody>
                                         <tfoot style="display: none;">
                                             <tr  *ngFor="let p of paymentMode">
-                                                <th colspan="4" style="background-color: red !important;">{{p.Name}} - {{p.Amount}}</th>        
+                                                <th colspan="4" style="background-color: red ;">{{p.Name}} - {{p.Amount}}</th>        
                                             </tr>
                                         </tfoot>
                                     </table>
