--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -133,8 +133,8 @@
                                                     <mat-select name="ProductStatus"
                                                         [(ngModel)]="BillMaster.ProductStatus">
                                                         <mat-option value="All">All</mat-option>
-                                                        <mat-option value="0">Pending</mat-option>
-                                                        <mat-option value="1">Deliverd</mat-option>
+                                                        <mat-option value="Pending">Pending</mat-option>
+                                                        <mat-option value="Deliverd">Deliverd</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
