--- a/web1/src/app/admin/product-manage/product-manage.component.html
+++ b/web1/src/app/admin/product-manage/product-manage.component.html
@@ -178,7 +178,11 @@
                                         [disabled]="newSpec.Name == ''" (click)="saveSpec()">Save</button>
                                 </div>
                             </div>
-
+                            <div class="row">
+                                <div class="col-xl-6 col-lg-6 col-md-6 col-12 mb-0">
+                                     <h2 style="color: red;">Note - Date Field should be in last</h2>
+                                </div>
+                            </div>
                             <div class="body" style="overflow-x:auto;overflow:auto;height:420px;"
                                 class="table-responsive">
                                 <table class="table" class="table table-striped table-hover table-sm table-bordered"
