--- a/web1/src/app/report/product-return/product-return.component.html
+++ b/web1/src/app/report/product-return/product-return.component.html
@@ -72,11 +72,7 @@
                           <button type="button" class="me-3 ms-3"  mat-raised-button color="warn" (click)="ReturnMasterFromReset()">
                             Reset
                           </button>
-                          <button  mat-raised-button color="primary"  
-                          printTitle="Purchase Retrun Report  {{this.selectsShop}}"  printSectionId="PurchaseRetrunPDF"  ngxPrint [useExistingCss]="true">
-                            <i  class="far fa-file-pdf "
-                            style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                        </button>
+                         
                         </div>
                       </div>
                     </form>
@@ -107,7 +103,13 @@
                                 <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                   (click)="exportAsXLSXMaster()">
                                 </i>
-                              
+                                <button class="bg_none ms-4"
+                                printTitle="Product Retrun Report - {{this.selectsShop}}"
+                                printSectionId="PurchaseRetrunPDF" ngxPrint
+                                ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                               </td>
                               <td></td>
                               <td></td>
@@ -263,20 +265,13 @@
                           </div>
                         </div>
                         <!--  spec end -->
-                        <div class="col-xl-3 col-lg-4 col-md-6 col-12 ">
+                        <div class="col-xl-2 col-lg-4 col-md-6 col-12 ">
                           <button  type="submit" mat-raised-button color="primary">
                           Search
                           </button>
                           <button type="button" class="me-1 ms-1" mat-raised-button color="warn" (click)="RetureDetailsFromReset()">
                              Reset
                           </button>
-                         
-
-                          <button mat-raised-button  color="primary" printSectionId="ProductTypesPDF" printTitle="Product return (ProductType) Report {{this.selectsShop}}"  ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '70%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                            <i  class="far fa-file-pdf "
-                            style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                        </button>
-
                         </div>
                       </div>
                     </form>
@@ -317,7 +312,13 @@
                                 <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                   (click)="exportAsXLSXDetail()">
                                 </i>
-                                
+                                <button class="bg_none ms-4"
+                                printTitle="Product Type Retrun Report - {{this.selectsShop}}"
+                                printSectionId="ProductTypesPDF" ngxPrint
+                                ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '75%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                               </td>
                               <td></td>
                               <td></td>
