--- a/web1/src/app/report/transfer-product-report/transfer-product-report.component.scss
+++ b/web1/src/app/report/transfer-product-report/transfer-product-report.component.scss
@@ -28,3 +28,11 @@
 .paddingInp{
         padding: 0.4em 0 !important;
 }
+
+.bg_none {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
