--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -103,14 +103,12 @@
                                                     <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
                                                         <button class="bg_none ms-4"
-                                                        printTitle="sale Report {{this.shopLists}}"
+                                                        printTitle="Expense Report - {{this.shopLists}}"
                                                         printSectionId="ExpensePDF" ngxPrint
-                                                        styleSheetFile="../../../assets/pdf.css">
+                                                        ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '100%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
                                                         <i class="far fa-file-pdf "
                                                             style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
                                                     </button>
-
-                                                   
                                                 </td>
                                                 <td></td>
                                                 <td></td>
