--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -178,10 +178,7 @@
                         <button type="button" mat-raised-button color="warn" (click)="inventorysFromReset()">
                           Reset
                         </button>
-                        <button  class=" ms-2" mat-raised-button color="primary"  printTitle="inventory Report {{this.selectsShop}}"  printSectionId="inventorysPDF" ngxPrint styleSheetFile="../../../assets/pdf.css">
-                          <i  class="far fa-file-pdf "
-                          style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                      </button>
+                       
                       </div>
                     </div>
                   </form>
@@ -218,9 +215,14 @@
                           <tr class="totolRow" *ngIf="this.DetailtotalQty != null">
                             <td>
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
-                                (click)="exportAsXLSXDetail()">
-                              </i>
-                             
+                                (click)="exportAsXLSXDetail()"> </i>
+                                <button class="bg_none ms-4"
+                                printTitle="inventory Report - {{this.selectsShop}}"
+                                printSectionId="inventorysPDF" ngxPrint
+                                ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '50%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
