--- a/web1/src/app/report/purchase-report/purchase-report.component.css
+++ b/web1/src/app/report/purchase-report/purchase-report.component.css
@@ -19,3 +19,10 @@
     background-color: rgb(242, 32, 32) !important;
 }
 
+.bg_none {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
