--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -32,7 +32,7 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                        <mat-form-field class="example-full-width mb-0">
+                        <!-- <mat-form-field class="example-full-width mb-0">
                           <mat-label>Supplier Name</mat-label>
                           <mat-select name="Supplier" [(ngModel)]="PurchaseMaster.SupplierID" editable="true"
                             #singleSelect>
@@ -45,6 +45,18 @@
                           <mat-error>
                             Select Supplier
                           </mat-error>
+                        </mat-form-field> -->
+                        <mat-form-field class="example-full-width">
+                          <mat-label>Supplier Name</mat-label>
+                          <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                          name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto"
+                                 (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                          <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
+                            <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                            <mat-option (click)="CustomerSelection('PurchaseMaster',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                              {{option.Name}} {{option.MobileNo1}}
+                            </mat-option>
+                          </mat-autocomplete>
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
@@ -84,10 +96,6 @@
                           (click)="purchaseFromReset()">
                           Reset
                         </button>
-                        <button mat-raised-button color="primary" printTitle="Purchase Report {{this.selectsShop}}"
-                          printSectionId="PurchasePDF" ngxPrint styleSheetFile="../../../assets/pdf.css">
-                          <i class="far fa-file-pdf " style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                        </button>
                       </div>
                     </div>
                   </form>
@@ -119,8 +127,13 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXMaster()">
                               </i>
-                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;">
-                              </i>
+                              <button class="bg_none ms-4"
+                              printTitle="Purchase Report - {{this.selectsShop}}"
+                              printSectionId="PurchasePDF" ngxPrint
+                              ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                              <i class="far fa-file-pdf "
+                                  style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                          </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -186,7 +199,7 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                        <mat-form-field class="example-full-width mb-0">
+                        <!-- <mat-form-field class="example-full-width mb-0">
                           <mat-label>Supplier Name</mat-label>
                           <mat-select name="Supplier" [(ngModel)]="PurchaseDetail.SupplierID" editable="true"
                             #singleSelect>
@@ -199,6 +212,18 @@
                           <mat-error>
                             Select Supplier
                           </mat-error>
+                        </mat-form-field> -->
+                        <mat-form-field class="example-full-width">
+                          <mat-label>Supplier Name</mat-label>
+                          <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                          name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto1"
+                                 (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                          <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" >
+                            <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                            <mat-option (click)="CustomerSelection('PurchaseDetail',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                              {{option.Name}} {{option.MobileNo1}}
+                            </mat-option>
+                          </mat-autocomplete>
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
@@ -303,17 +328,13 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-3 col-lg-4 col-md-6 col-12 mb-0 ">
-                        <button class="me-3" type="submit" mat-raised-button color="primary">
+                        <button class="me-2" type="submit" mat-raised-button color="primary">
                           Search
                         </button>
                         <button type="button" mat-raised-button color="warn" (click)="purchaseDetailsFromReset()">
                           Reset
                         </button>
-                        <button class=" ms-3" mat-raised-button color="primary"
-                          printTitle="Purchase Product Report {{this.selectsShop}}" printSectionId="producttype"
-                          ngxPrint styleSheetFile="../../../assets/pdf.css">
-                          <i class="far fa-file-pdf " style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                        </button>
+                       
                       </div>
                     </div>
                   </form>
@@ -359,9 +380,13 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXDetail()">
                               </i>
-                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;"
-                                (click)="PDFdetail()">
-                              </i>
+                              <button class="bg_none ms-4"
+                              printTitle="Purchase Product Type Report - {{this.selectsShop}}"
+                              printSectionId="producttype" ngxPrint
+                              ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '45%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                              <i class="far fa-file-pdf "
+                                  style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                          </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -478,11 +503,7 @@
                         <button class="me-3" mat-raised-button color="primary">Search</button>
                         <button class="mr-0" type="button" mat-raised-button color="warn"
                           (click)="purchaseChargeFromReset()">Reset</button>
-                        <button class=" ms-3" mat-raised-button color="primary"
-                          printTitle="Purchase Charge {{this.selectsShop}}" [useExistingCss]="true"
-                          printSectionId="Purchasecharge" ngxPrint>
-                          <i class="far fa-file-pdf " style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                        </button>
+                       
                       </div>
                     </div>
                   </form>
@@ -507,6 +528,13 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXcharge()">
                               </i>
+                              <button class="bg_none ms-4"
+                              printTitle="Purchase Charge Report - {{this.selectsShop}}"
+                              printSectionId="Purchasecharge" ngxPrint
+                              ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '100%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                              <i class="far fa-file-pdf "
+                                  style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                          </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -559,19 +587,17 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                        <mat-form-field class="example-full-width mb-0">
+                        <mat-form-field class="example-full-width">
                           <mat-label>Supplier Name</mat-label>
-                          <mat-select name="Supplier" [(ngModel)]="ProductExpiry.SupplierID" editable="true"
-                            #singleSelect>
-                            <mat-option [value]="0">All</mat-option>
-                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
-                              {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
-                              </span>
+                          <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                          name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto2"
+                                 (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                          <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" >
+                            <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                            <mat-option (click)="CustomerSelection('ProductExpiry',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                              {{option.Name}} {{option.MobileNo1}}
                             </mat-option>
-                          </mat-select>
-                          <mat-error>
-                            Select Supplier
-                          </mat-error>
+                          </mat-autocomplete>
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
