--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -65,7 +65,7 @@
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                                <mat-form-field class="example-full-width mb-0">
+                                                <!-- <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Employee Name</mat-label>
                                                     <mat-select name="Employee" [(ngModel)]="BillMaster.EmployeeID"
                                                         #Employeecontrol>
@@ -76,24 +76,26 @@
                                                         </mat-option>
                                                     </mat-select>
                                                     <mat-error>Name is required</mat-error>
-                                                </mat-form-field>
+                                                </mat-form-field> -->
+                                                <mat-form-field class="example-full-width">
+                                                    <mat-label>Employee Name</mat-label>
+                                                    <input type="text" placeholder="serach employee" aria-label="Text" matInput
+                                                    name="EmployeeID"  [formControl]="myControl" [matAutocomplete]="auto2"
+                                                           (input)="customerSearch(myControl.value, 'Name','Employee')">
+                                                    <mat-autocomplete autoActiveFirstOption2 #auto2="matAutocomplete" >
+                                                      <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                                                      <mat-option (click)="CustomerSelection('emp',option2.ID)" *ngFor="let option2 of filteredOptions" [value]="option2.Name">
+                                                        {{option2.Name}} {{option2.MobileNo1}}
+                                                      </mat-option>
+                                                    </mat-autocomplete>
+                                                  </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                                <!-- <mat-form-field class="example-full-width mb-0">
-                                                    <mat-label>Customer</mat-label>
-                                                    <mat-select name="CustomerID" [(ngModel)]="BillMaster.CustomerID">
-                                                        <mat-option [value]=0>All</mat-option>
-                                                        <mat-option [value]="c.ID"
-                                                            *ngFor="let c of customerList  let i = index;"> {{c.Name}}
-                                                            <span style="float: right;">{{c.MobileNo1}} </span>
-                                                        </mat-option>
-                                                    </mat-select>
-                                                </mat-form-field> -->
                                                     <mat-form-field class="example-full-width">
                                                       <mat-label>Customer</mat-label>
                                                       <input type="text" placeholder="serach customer" aria-label="Text" matInput
                                                       name="CustomerID"  [formControl]="myControl" [matAutocomplete]="auto"
-                                                             (input)="customerSearch(myControl.value, 'Name')">
+                                                             (input)="customerSearch(myControl.value, 'Name','Customer')">
                                                       <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
                                                         <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
                                                         <mat-option (click)="CustomerSelection('Value',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
@@ -359,7 +361,7 @@
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                                <mat-form-field class="example-full-width mb-0">
+                                                <!-- <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Customer</mat-label>
                                                     <mat-select name="customerID" [(ngModel)]="Billdetail.CustomerID">
                                                         <mat-option [value]=0>All</mat-option>
@@ -368,7 +370,19 @@
                                                             <span style="float: right;">{{c.MobileNo1}} </span>
                                                         </mat-option>
                                                     </mat-select>
-                                                </mat-form-field>
+                                                </mat-form-field> -->
+                                                <mat-form-field class="example-full-width">
+                                                    <mat-label>Customer</mat-label>
+                                                    <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                                                    name="CustomerID"  [formControl]="myControl" [matAutocomplete]="auto"
+                                                           (input)="customerSearch(myControl.value, 'Name','Customer')">
+                                                    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
+                                                      <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                                                      <mat-option (click)="CustomerSelection('Billdetail',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                                                        {{option.Name}} {{option.MobileNo1}}
+                                                      </mat-option>
+                                                    </mat-autocomplete>
+                                                  </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
