--- a/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -153,11 +153,7 @@
                                         <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
-                                        <button class=" ms-3" mat-raised-button color="primary"  printTitle="ProductTransfer {{this.selectsShop}}"  [useExistingCss]="true" printSectionId="ProductT" ngxPrint >
-                                            <i  class="far fa-file-pdf "
-                                            style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                        </button>
-                                        
+                                       
                                     </div>
                                 </div>
                             </form>
@@ -182,7 +178,13 @@
                                                 <td>
                                                     <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
-                                                   
+                                                        <button class="bg_none ms-4"
+                                                        printTitle="Transfer Product Report - {{this.selectsShop}}"
+                                                        printSectionId="ProductT" ngxPrint
+                                                        ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                                        <i class="far fa-file-pdf "
+                                                            style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                    </button>
                                                 </td>
                                                 <td></td>
                                                 <td></td>
