--- a/web1/src/app/report/vendor-credit/vendor-credit.component.css
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.css
@@ -4,3 +4,11 @@
     font-size: 15px;
     text-align: center;
 }
+
+.bg_none {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
