--- a/web1/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.html
@@ -77,18 +77,13 @@
                                         </mat-form-field>
                                     </div>
                                     <!--  spec end -->
-                                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mb-0 ">
+                                    <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0 ">
                                         <button class="me-3" type="submit" mat-raised-button color="primary">
                                              Search
                                         </button>
                                         <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
-                                        <button class=" ms-3" mat-raised-button color="primary"  printTitle="ProductTransfer {{this.selectsShop}}"  [useExistingCss]="true" printSectionId="ProductT" ngxPrint >
-                                            <i  class="far fa-file-pdf "
-                                            style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                        </button>
-                                        
                                     </div>
                                 </div>
                             </form>
@@ -115,7 +110,13 @@
                                                 <td>
                                                     <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
-                                                   
+                                                        <button class="bg_none ms-2"
+                                                        printTitle="Supplier Credit Report - {{this.selectsShop}}"
+                                                        printSectionId="ProductT" ngxPrint
+                                                        ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '75%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                                        <i class="far fa-file-pdf "
+                                                            style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                    </button>
                                                 </td>
                                                 <td></td>
                                                 <td></td>
