--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -30,7 +30,7 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                        <mat-form-field class="example-full-width mb-0">
+                        <!-- <mat-form-field class="example-full-width mb-0">
                           <mat-label>Supplier Name</mat-label>
                           <mat-select name="Supplier" [(ngModel)]="inventory.SupplierID" editable="true" #singleSelect>
                             <mat-option [value]="0">All</mat-option>
@@ -42,6 +42,18 @@
                           <mat-error>
                             Select Supplier
                           </mat-error>
+                        </mat-form-field> -->
+                        <mat-form-field class="example-full-width">
+                          <mat-label>Supplier Name</mat-label>
+                          <input type="text" placeholder="serach Supplier" aria-label="Text" matInput
+                          name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto"
+                                 (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                          <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
+                            <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                            <mat-option (click)="CustomerSelection('inventory',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                              {{option.Name}} {{option.MobileNo1}}
+                            </mat-option>
+                          </mat-autocomplete>
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
@@ -298,7 +310,7 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0 ">
-                        <mat-form-field class="example-full-width mb-0">
+                        <!-- <mat-form-field class="example-full-width mb-0">
                           <mat-label>Supplier Name</mat-label>
                           <mat-select name="Supplier" [(ngModel)]="data.SupplierID" editable="true" #singleSelect>
                             <mat-option [value]="0">All</mat-option>
@@ -310,6 +322,18 @@
                           <mat-error>
                             Select Supplier
                           </mat-error>
+                        </mat-form-field> -->
+                        <mat-form-field class="example-full-width">
+                          <mat-label>Supplier Name</mat-label>
+                          <input type="text" placeholder="serach Supplier" aria-label="Text" matInput
+                          name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto1"
+                                 (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                          <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" >
+                            <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                            <mat-option (click)="CustomerSelection('data',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                              {{option.Name}} {{option.MobileNo1}}
+                            </mat-option>
+                          </mat-autocomplete>
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-12 mb-0">
@@ -408,7 +432,7 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
-                        <mat-form-field class="example-full-width mb-0">
+                        <!-- <mat-form-field class="example-full-width mb-0">
                           <mat-label>Supplier Name</mat-label>
                           <mat-select name="Supplier" [(ngModel)]="ProductExpiry.SupplierID" editable="true"
                             #singleSelect>
@@ -421,6 +445,18 @@
                           <mat-error>
                             Select Supplier
                           </mat-error>
+                        </mat-form-field> -->
+                        <mat-form-field class="example-full-width">
+                          <mat-label>Supplier Name</mat-label>
+                          <input type="text" placeholder="serach Supplier" aria-label="Text" matInput
+                          name="SupplierID"  [formControl]="myControl" [matAutocomplete]="auto2"
+                                 (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                          <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete" >
+                            <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                            <mat-option (click)="CustomerSelection('ProductExpiry',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                              {{option.Name}} {{option.MobileNo1}}
+                            </mat-option>
+                          </mat-autocomplete>
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
