--- a/web1/src/app/report/old-sale/old-sale.component.html
+++ b/web1/src/app/report/old-sale/old-sale.component.html
@@ -66,16 +66,18 @@
                                         </div>
                                       
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                            <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Customer</mat-label>
-                                                <mat-select name="CustomerID" [(ngModel)]="BillMaster.CustomerID">
-                                                    <mat-option [value]=0>All</mat-option>
-                                                    <mat-option [value]="c.ID"
-                                                        *ngFor="let c of customerList  let i = index;"> {{c.Name}}
-                                                        <span style="float: right;">{{c.MobileNo1}} </span>
-                                                    </mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
+                                            <mat-form-field class="example-full-width">
+                                                <mat-label>Customer Name</mat-label>
+                                                <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                                                name="CustomerID"  [formControl]="myControl" [matAutocomplete]="auto"
+                                                       (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                                                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" >
+                                                  <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                                                  <mat-option (click)="CustomerSelection('BillMaster',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                                                    {{option.Name}} {{option.MobileNo1}}
+                                                  </mat-option>
+                                                </mat-autocomplete>
+                                              </mat-form-field>
                                         </div>
                                       
                                         <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 ">
@@ -231,16 +233,18 @@
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                            <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>Customer</mat-label>
-                                                <mat-select name="customerID" [(ngModel)]="Billdetail.CustomerID">
-                                                    <mat-option [value]=0>All</mat-option>
-                                                    <mat-option [value]="c.ID"
-                                                        *ngFor="let c of customerList  let i = index;"> {{c.Name}}
-                                                        <span style="float: right;">{{c.MobileNo1}} </span>
-                                                    </mat-option>
-                                                </mat-select>
-                                            </mat-form-field>
+                                            <mat-form-field class="example-full-width">
+                                                <mat-label>Customer Name</mat-label>
+                                                <input type="text" placeholder="serach customer" aria-label="Text" matInput
+                                                name="CustomerID"  [formControl]="myControl" [matAutocomplete]="auto1"
+                                                       (input)="customerSearch(myControl.value, 'Name','Supplier')">
+                                                <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete" >
+                                                  <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option>
+                                                  <mat-option (click)="CustomerSelection('Billdetail',option.ID)" *ngFor="let option of filteredOptions" [value]="option.Name">
+                                                    {{option.Name}} {{option.MobileNo1}}
+                                                  </mat-option>
+                                                </mat-autocomplete>
+                                              </mat-form-field>
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                             <mat-form-field class="example-full-width mb-0">
