--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -949,7 +949,9 @@
 
                     <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Invoice +
                         Power</button> -->
-                    <button type="button" [disabled]="this.BillLink == ''" mat-raised-button color="primary" class="me-3 ms-3" (click)="sendWhatsappBill()"> Whatsapp</button>
+                        <!-- [disabled]="this.BillLink == ''" -->
+                    <button type="button"  mat-raised-button color="primary" class="me-3 ms-3"  (click)="sendWhatsappBill()"> 
+                         Whatsapp</button>
                     <button type="button" mat-raised-button color="primary">Email</button>
                 </div>
             </div>
