--- a/server/views/billOrder_form.ejs
+++ b/server/views/billOrder_form.ejs
@@ -300,7 +300,7 @@
                 <p><b style="padding-right: 5px;">Name:</b> <%=data.customer.Name%></p>
             </div>
             <div class="col2">
-                <p><b style="padding-right: 5px;">Contact No.</b><%=data.customer.MoblieNo1%></p>
+                <p><b style="padding-right: 5px;">Contact No.</b> <%=data.customer.MobileNo1%></p>
             </div>
             <div class="col3">
                 <p><b style="padding-right: 5px;">Dated</b> <%=data.billMaster.BillDate%></p>
