--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -42,7 +42,7 @@
          <div class="col-2">
             <p class="cus_p"> : <%=data.customer.Idd%></p>
             <p class="cus_p"> : <%=data.customer.Name%> </p>
-            <p class="cus_p"> : <%=data.customer.RefferedByDoc%></p>
+            <p class="cus_p"> : <%=data.spectacle.RefferedByDoc%></p>
          </div>
       </div>
       <div class="row2">
