--- a/web1/src/app/common/login.component.html
+++ b/web1/src/app/common/login.component.html
@@ -5,7 +5,7 @@
       <div class="row mt-5 mt-sm-0">
         <div class="col-xl-4 col-lg-6 col-md-8 col-12 mt-5 mx-auto">
           <div class="card">
-            <form #f="ngForm" (ngSubmit)="onSubmit(content)" class="box">
+            <form #f="ngForm" (ngSubmit)="onSubmit(content)" class="box" autocomplete="off">
               <div class="row">
                 <div class="col-md-5 col-sm-4 col-7 mx-auto text-center">
                   <h1 class="log_name">Login</h1>
@@ -25,9 +25,9 @@
                 </div>
               </div>
               <p class="text-light tagline"> Please enter your login and password!</p>
-              <input matInput type="text" name="LoginName" placeholder="LoginName" [(ngModel)]="data.LoginName" required>
+              <input matInput type="text" name="LoginName" #username placeholder="LoginName" [(ngModel)]="data.LoginName" required autocomplete="off">
               <div>
-              <input #x  matInput type="password" name="Password" placeholder="Password" [(ngModel)]="data.Password"required>
+              <input #x  matInput type="password" name="Password" placeholder="Password" [(ngModel)]="data.Password" required autocomplete="new-password">
               <mat-icon class="key mt-1"   (click)="x.type = x.type=='password'?'text':'password'"  matSuffix>vpn_key</mat-icon>
             </div>
               <a class="forgot text-light" href="#">Forgot password?</a>
