--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -20,7 +20,7 @@
 <body>
     <% if(data.length !==0){ data.forEach(function (i, index) { %>
         <% if (data.CompanyBarcode == 5){%>
-            <% if (data.CompanyID == 1){%>
+            <% if (data.CompanyID == 20 || data.CompanyID == 19){%>
                 <table style="margin-left: -10px; margin-top: -9px; ">
                     <tr>
                         <th  style="width: 140px; padding: 0;">
@@ -60,7 +60,7 @@
                     </tr>
                 </table>
                  <%}%>
-                 <% if (data.CompanyID !== 1){%> 
+                 <% if (data.CompanyID !== 20 && data.CompanyID !== 19){%> 
             <table style="margin-left: -10px; margin-top: -9px; ">
                 <tr>
                     <th  style="width: 140px; padding: 0;">
