--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -136,11 +136,25 @@
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0">
-                    <mat-form-field class="example-full-width mb-0">
+                    <!-- <mat-form-field class="example-full-width mb-0">
                         <mat-label>Search By Product Name</mat-label>
                         <input matInput name="searchString" [(ngModel)]="Req.searchString" #SearchStringNamecontrol
                             autocomplete="off" (change)="getSearchByString()">
-                    </mat-form-field>
+                    </mat-form-field> -->
+
+                    <mat-form-field class="example-full-width">
+                        <mat-label>Search By Product Name</mat-label>
+                        <input type="text"  aria-label="Text" matInput
+                        name="searchString"  [formControl]="myControl" [matAutocomplete]="auto"
+                               (input)="getSearchByString(myControl.value, 'Name')">
+                        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [panelWidth]="'560px'">
+                          <!-- <mat-option (click)="CustomerSelection('All','0')" value='All'>All</mat-option> -->
+                          <mat-option style="border-bottom: 2px solid #000 !important;" class="customer-option" (click)="getSearchByBarcodeNoS(option.Barcode)"  *ngFor="let option of BarcodeList" [value]="option.FullProductName">
+                             {{option.FullProductName}}  <b class="redclass">#{{option.BarCodeCount}}  </b> 
+                            
+                          </mat-option>
+                        </mat-autocomplete>
+                      </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0">
                     <mat-form-field class="example-full-width mb-0">
@@ -174,12 +188,12 @@
                     *ngIf="( selectedProduct !== '' || selectedProduct !== undefined || selectedProduct !== null )">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Select Barcode</mat-label>
-                        <mat-select name="FieldType" [(ngModel)]="Req.SearchBarCode" #Typecontrol
+                        <mat-select name="SearchBarCode" [(ngModel)]="Req.SearchBarCode" #SearchBarCodecontrol
                             (selectionChange)="getSearchByBarcodeNo()">
                             <mat-option [disabled]="this.loginShop?.ID !== bc.ShopID && BarcodeListShow"
                                 [ngClass]="{'otherShopClass': this.loginShop?.ID !== bc.ShopID }"
                                 *ngFor="let bc of BarcodeList ; let i = index;" [value]="bc.Barcode">
-                                {{bc.Barcode}} # {{bc.BarCodeCount }} {{bc.p}}| {{bc.ProductName | uppercase}} |
+                                {{bc.Barcode}} <a> # {{bc.BarCodeCount }}</a>  | {{bc.ProductName | uppercase}} |
                                 {{bc.ShopName | titlecase }} <span [style.color]="'blue'"
                                     *ngIf="bc.AreaName !== 'null'">({{bc.AreaName | titlecase}})</span>
                             </mat-option>
